# WatchNext-anime-recommender

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: app.py
chroma_db/7605acc1-62d1-476c-a08d-4dd48d664ea3/: index_metadata.pickle
pipeline/: build_pipeline.py  pipeline.py
src/: data_loader.py  prompt_template.py  recommender.py  vector_store.py
